--- a/Alert/app/src/main/res/layout/activity_alert_detail.xml
+++ b/Alert/app/src/main/res/layout/activity_alert_detail.xml
@@ -7,7 +7,7 @@
     tools:context="org.alertpreparedness.platform.alert.dashboard.activity.AlertDetailActivity">
 
     <include
-        android:id="@+id/action_bar"
+        android:id="@+id/action_toolbar"
         layout="@layout/action_bar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -23,7 +23,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/action_bar">
+        app:layout_constraintTop_toBottomOf="@+id/action_toolbar">
 
         <ImageView
             android:id="@+id/imgHazardIcon"
