--- a/Alert/app/src/main/res/layout/action_bar.xml
+++ b/Alert/app/src/main/res/layout/action_bar.xml
@@ -15,17 +15,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/action_bar_title"
-            android:layout_width="212dp"
-            android:layout_height="25dp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:fontFamily="@font/alef"
-            android:gravity="center"
-            android:textColor="@android:color/white"
-            android:textSize="15sp" />
-
         <ImageView
             android:id="@+id/leftImageView"
             android:layout_width="14dp"
@@ -35,6 +24,30 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="21dp"
             android:layout_marginStart="21dp"
+            app:srcCompat="@mipmap/ic_launcher_round" />
+
+        <TextView
+            android:id="@+id/action_bar_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="21dp"
+            android:layout_marginStart="21dp"
+            android:gravity="center"
+            android:textColor="@android:color/white"
+            android:textSize="19sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/rightImageView"
+            android:layout_width="14dp"
+            android:layout_height="14dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="21dp"
+            android:layout_marginEnd="21dp"
             app:srcCompat="@mipmap/ic_launcher_round" />
 
     </RelativeLayout>
