Add/edit log WIP

--- a/Alert/app/src/main/res/values/colors.xml
+++ b/Alert/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="divider_color">#FFEAEAEA</color>
     <color name="remove_button">#E10514</color>
     <color name="hazard_tab_color">#F3F3F3</color>
+    <color name="log_content">#aa000000</color>
 </resources>
