--- a/Alert/app/src/main/res/layout/activity_login_screen.xml
+++ b/Alert/app/src/main/res/layout/activity_login_screen.xml
@@ -11,7 +11,10 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="495dp"
-        android:layout_margin="8dp"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin_one_and_a_half"
+        android:layout_marginRight="@dimen/activity_horizontal_margin_one_and_a_half"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -26,65 +29,55 @@
             android:layout_marginLeft="108dp"
             android:layout_marginRight="107dp"
             android:layout_marginStart="108dp"
-            android:layout_marginTop="92px"
+            android:layout_marginTop="92dp"
             app:srcCompat="@drawable/alert" />
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="52dp">
+        <EditText
+            android:layout_marginTop="52dp"
+            android:id="@+id/email_address"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:background="@drawable/rounded_edittext"
+            android:drawableLeft="@drawable/login_person"
+            android:drawablePadding="15dip"
+            android:ems="10"
+            android:hint="@string/email_address"
+            android:textColorHint="@color/hintGray"
+            android:inputType="textEmailAddress"
+            android:paddingLeft="15dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="15sp"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="0dp" />
 
-            <EditText
-                android:id="@+id/email_address"
-                android:layout_width="315dp"
-                android:layout_height="44dp"
-                android:layout_alignParentTop="true"
-                android:background="@drawable/rounded_edittext"
-                android:drawableLeft="@drawable/login_person"
-                android:drawablePadding="15dip"
-                android:ems="10"
-                android:hint="@string/email_address"
-                android:textColorHint="@color/hintGray"
-                android:inputType="textEmailAddress"
-                android:paddingLeft="15dp"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="15sp"
-                tools:layout_editor_absoluteX="8dp"
-                tools:layout_editor_absoluteY="0dp" />
-        </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp">
-
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="315dp"
-                android:layout_height="44dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:background="@drawable/rounded_edittext"
-                android:drawableLeft="@drawable/login_lock"
-                android:drawablePadding="15dip"
-                android:drawableRight="@drawable/login_eye"
-                android:ems="10"
-                android:hint="Password"
-                android:textColorHint="@color/hintGray"
-                android:inputType="textPassword"
-                android:paddingLeft="15dp"
-                android:paddingRight="12dp"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="15dp"
-                tools:layout_editor_absoluteX="8dp"
-                tools:layout_editor_absoluteY="0dp" />
-        </RelativeLayout>
+        <EditText
+            android:layout_marginTop="10dp"
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/rounded_edittext"
+            android:drawableLeft="@drawable/login_lock"
+            android:drawablePadding="15dip"
+            android:drawableRight="@drawable/login_eye"
+            android:ems="10"
+            android:hint="Password"
+            android:textColorHint="@color/hintGray"
+            android:inputType="textPassword"
+            android:paddingLeft="15dp"
+            android:paddingRight="12dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="15dp"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="0dp" />
 
         <Button
             android:id="@+id/btnLogin"
             android:text="Login"
-            android:layout_width="315dp"
+            android:layout_width="match_parent"
             android:layout_height="44dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/rounded_loginbtn"
