--- a/Alert/app/src/main/res/values/dimens.xml
+++ b/Alert/app/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="profile_width">75dp</dimen>
     <dimen name="profile_height">75dp</dimen>
     <dimen name="activity_vertical_margin_half">8dp</dimen>
+    <dimen name="text_size">15sp</dimen>
 </resources>
