--- a/Alert/app/src/main/res/layout/item_text.xml
+++ b/Alert/app/src/main/res/layout/item_text.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:layout_marginRight="50dp"
         android:layout_alignParentLeft="true"
         android:id="@+id/textview"
         android:layout_width="match_parent"
