--- a/Alert/app/src/main/res/values/colors.xml
+++ b/Alert/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="white">#ffffff</color>
     <color name="alertGreen">#46AA31</color>
     <color name="alertAmber">#f3a500</color>
-    <color name="alertRed">#E10514</color>
+    <color name="alertRed">#e10514</color>
     <color name="home_text">#686868</color>
     <color name="home_g">#64000000</color>
     <color name="hintGray">#bfc0c2</color>
