--- a/Alert/app/src/main/res/layout/activity_hazard_selection.xml
+++ b/Alert/app/src/main/res/layout/activity_hazard_selection.xml
@@ -21,6 +21,11 @@
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize" />
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvHazardList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
