--- a/Alert/app/src/main/res/layout/item_create_alert_field.xml
+++ b/Alert/app/src/main/res/layout/item_create_alert_field.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            android:layout_marginTop="2dp"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
