--- a/Alert/app/src/main/res/layout/actionbar_layout.xml
+++ b/Alert/app/src/main/res/layout/actionbar_layout.xml
@@ -14,7 +14,6 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        />
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
 </android.support.v7.widget.CardView>
