--- a/Alert/app/src/main/res/layout/activity_home_screen.xml
+++ b/Alert/app/src/main/res/layout/activity_home_screen.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <include
-            android:id="@+id/alert_appbar"
+            android:id="@+id/alert_appbar_layout"
             layout="@layout/custom_alert_appbar"
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize" />
