--- a/Alert/app/src/main/res/layout/custom_alert_appbar.xml
+++ b/Alert/app/src/main/res/layout/custom_alert_appbar.xml
@@ -1,32 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/green_alert_toolbar"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    app:contentInsetLeft="0dp"
-    app:contentInsetStart="0dp"
-    android:contentInsetLeft="0dp"
-    android:contentInsetStart="0dp"
-    android:layout_height="?android:attr/actionBarSize"
-    android:background="@color/colorPrimaryDark">
+    android:layout_height="wrap_content"
+    card_view:cardElevation="6dp"
+    card_view:cardCornerRadius="0dp">
 
-    <RelativeLayout
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/alert_appbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
 
-        <TextView
-            android:id="@+id/custom_bar_title"
-            android:layout_width="212dp"
-            android:layout_height="25dp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/alert_green"
-            android:fontFamily="@font/alef"
-            android:gravity="center"
-            android:text="@string/green_alert_level"
-            android:textColor="@android:color/white"
-            android:textSize="15sp" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/custom_bar_title"
+                android:layout_width="212dp"
+                android:layout_height="25dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/alert_green"
+                android:fontFamily="@font/alef"
+                android:gravity="center"
+                android:text="@string/green_alert_level"
+                android:textColor="@android:color/white"
+                android:textSize="15sp" />
 
-</android.support.v7.widget.Toolbar>
+        </RelativeLayout>
+
+    </android.support.v7.widget.Toolbar>
+</android.support.v7.widget.CardView>
