--- a/Alert/app/src/main/res/layout/item_response_plan.xml
+++ b/Alert/app/src/main/res/layout/item_response_plan.xml
@@ -63,9 +63,9 @@
             tools:ignore="RtlHardcoded" />
 
         <TextView
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:text="Approved"
+            android:textSize="12sp"
+            android:layout_marginTop="18dp"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin_half"
             android:layout_below="@+id/tvDescription"
             android:layout_toRightOf="@+id/ivStatusIcon"
             android:textColor="@color/alertRed"
@@ -75,8 +75,8 @@
             tools:ignore="RtlHardcoded" />
 
         <TextView
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="Last updated at: 12/12/12q"
+            android:textSize="12sp"
+            android:layout_marginTop="18dp"
             android:layout_below="@+id/tvDescription"
             android:layout_alignParentRight="true"
             android:id="@+id/tvLastUpdated"
