--- a/Alert/app/src/main/res/values/dimens.xml
+++ b/Alert/app/src/main/res/values/dimens.xml
@@ -14,4 +14,5 @@
     <dimen name="activity_vertical_margin_half">8dp</dimen>
     <dimen name="text_size">15sp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="activity_horizontal_margin_half">8dp</dimen>
 </resources>
