--- a/Alert/app/src/main/res/layout/activity_hazard_selection.xml
+++ b/Alert/app/src/main/res/layout/activity_hazard_selection.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <include
-            android:id="@+id/toolbar"
+            android:id="@+id/toolbar_layout"
             layout="@layout/actionbar_layout"
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize" />
