--- a/Alert/app/src/main/res/layout/item_approval_status.xml
+++ b/Alert/app/src/main/res/layout/item_approval_status.xml
@@ -26,7 +26,8 @@
         tools:ignore="RtlHardcoded" />
 
     <TextView
-        android:layout_marginTop="@dimen/activity_vertical_margin_half"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="10dp"
         android:id="@+id/status"
         android:layout_below="@+id/title"
         android:layout_toRightOf="@+id/icon"
