BUG FIX - Dashboard

--- a/Alert/app/src/main/res/drawable/red_bottom_rounded.xml
+++ b/Alert/app/src/main/res/drawable/red_bottom_rounded.xml
@@ -4,9 +4,9 @@
 
     <solid android:color="@color/alertRed"/>
 
-    <size android:width="344dp" android:height="25dp"/>
-    <corners
+    <size android:height="25dp"/>
 
+    <corners
         android:bottomLeftRadius="5dp"
         android:bottomRightRadius="5dp" />
 
