--- a/Alert/app/src/main/res/drawable/alert_green.xml
+++ b/Alert/app/src/main/res/drawable/alert_green.xml
@@ -4,8 +4,5 @@
     <solid android:color="@color/alertGreen"/>
 
     <corners
-        android:bottomRightRadius="20dp"
-        android:topLeftRadius="20dp"
-        android:topRightRadius="20dp"
-        android:bottomLeftRadius="20dp"/>
+        android:radius="20dp"/>
 </shape>
