--- a/Alert/app/src/main/res/layout/adapter_alert.xml
+++ b/Alert/app/src/main/res/layout/adapter_alert.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingEnd="8dp"
-    android:paddingRight="8dp">
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
+    android:paddingStart="8dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/alert_card"
-        android:layout_width="320dp"
+        android:layout_width="match_parent"
         android:layout_height="54dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,10 +84,8 @@
 
     <ImageView
         android:id="@+id/imgRedReq"
-        android:layout_width="320dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
