--- a/Alert/app/src/main/res/layout/adapter_my_tasks.xml
+++ b/Alert/app/src/main/res/layout/adapter_my_tasks.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingEnd="8dp"
+    android:paddingRight="8dp">
 
 
     <ImageView
@@ -18,13 +20,15 @@
 
     <TextView
         android:id="@+id/task_status"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="14dp"
         android:singleLine="false"
         android:textColor="@android:color/black"
         android:textSize="13sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/img_task"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
