--- a/Alert/app/src/main/res/layout/adapter_my_tasks.xml
+++ b/Alert/app/src/main/res/layout/adapter_my_tasks.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingBottom="8dp"
     android:paddingEnd="8dp"
     android:paddingRight="8dp">
 
@@ -35,14 +36,14 @@
 
     <TextView
         android:id="@+id/task_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="24dp"
         android:singleLine="false"
         android:textColor="@color/home_g"
         android:textSize="13sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/img_task"
         app:layout_constraintTop_toBottomOf="@+id/task_status" />
 </android.support.constraint.ConstraintLayout>
