--- a/Alert/app/src/main/res/layout/item_approval_status.xml
+++ b/Alert/app/src/main/res/layout/item_approval_status.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     android:layout_marginTop="@dimen/activity_vertical_margin_half"
+    android:layout_marginBottom="@dimen/activity_vertical_margin"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
+        android:layout_marginBottom="2dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:id="@+id/title"
