mostly finish first page on mycountry section

--- a/Alert/app/src/main/res/layout/content_select_area.xml
+++ b/Alert/app/src/main/res/layout/content_select_area.xml
@@ -49,6 +49,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/tvSelectLevel1Heading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12sp"
@@ -79,6 +80,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/tvSelectLevel2Heading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12sp"
