--- a/Alert/app/src/main/res/layout/adapter_alert.xml
+++ b/Alert/app/src/main/res/layout/adapter_alert.xml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingEnd="8dp"
-    android:paddingRight="8dp">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:id="@+id/alert_card"
-        android:layout_width="320dp"
-        android:layout_height="54dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardElevation="2dp"
+        app:cardCornerRadius="8dp"
+        android:layout_marginTop="@dimen/activity_vertical_margin_half"
+        android:layout_marginBottom="@dimen/activity_vertical_margin_half"
+        android:layout_alignParentTop="true">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -36,7 +34,7 @@
             <TextView
                 android:id="@+id/txt_alert_level"
                 android:layout_width="48dp"
-                android:layout_height="36dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
@@ -61,13 +59,14 @@
             <TextView
                 android:id="@+id/txt_hazard_name"
                 android:layout_width="wrap_content"
-                android:layout_height="16dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="11dp"
                 android:layout_marginTop="8dp"
                 android:text="Hazard Name"
                 android:textColor="@android:color/black"
                 app:layout_constraintStart_toEndOf="@+id/img_hazard_icon"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginLeft="11dp" />
 
             <TextView
                 android:id="@+id/txt_num_of_people"
@@ -77,25 +76,23 @@
                 android:layout_marginTop="2dp"
                 android:text="Number of people affected"
                 app:layout_constraintStart_toEndOf="@+id/img_hazard_icon"
-                app:layout_constraintTop_toBottomOf="@+id/txt_hazard_name" />
+                app:layout_constraintTop_toBottomOf="@+id/txt_hazard_name"
+                android:layout_marginLeft="11dp" />
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
 
     <ImageView
+        android:layout_below="@+id/alert_card"
         android:id="@+id/imgRedReq"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:layout_marginStart="32dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/alert_card"
-        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/red_bottom_rounded" />
 
     <TextView
+        android:layout_alignBaseline="@+id/imgRedReq"
         android:id="@+id/textViewAlertReq"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -104,11 +101,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:textColor="@color/white"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imgRedReq"
-        app:layout_constraintEnd_toEndOf="@+id/imgRedReq"
-        app:layout_constraintStart_toStartOf="@+id/imgRedReq"
-        app:layout_constraintTop_toTopOf="@+id/imgRedReq" />
+        android:textSize="12sp" />
 
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
