--- a/Alert/app/src/main/res/layout/adapter_alert.xml
+++ b/Alert/app/src/main/res/layout/adapter_alert.xml
@@ -14,8 +14,8 @@
         android:layout_height="wrap_content"
         app:cardElevation="2dp"
         app:cardCornerRadius="8dp"
-        android:layout_marginTop="@dimen/activity_vertical_margin_half"
-        android:layout_marginBottom="@dimen/activity_vertical_margin_half"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="6dp"
         android:layout_alignParentTop="true">
 
         <android.support.constraint.ConstraintLayout
