--- a/Alert/app/src/main/res/layout/fragment_action_expired.xml
+++ b/Alert/app/src/main/res/layout/fragment_action_expired.xml
@@ -1,11 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    tools:context="org.alertpreparedness.platform.alert.min_preparedness.fragment.ActionExpiredFragment">
 
     <android.support.v7.widget.CardView
         android:layout_width="312dp"
@@ -41,7 +39,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/vMinTitle" />
 
             <TextView
-                android:id="@+id/tvMinStatus"
+                android:id="@+id/tvActionExpired"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -50,13 +48,13 @@
                 android:layout_marginTop="8dp"
                 android:text="Completed"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/rvInProgress"
+                app:layout_constraintBottom_toTopOf="@+id/rvActionExpired"
                 app:layout_constraintEnd_toEndOf="@+id/vMinTitle"
                 app:layout_constraintStart_toStartOf="@+id/vMinTitle"
                 app:layout_constraintTop_toTopOf="@+id/vMinTitle" />
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/rvInProgress"
+                android:id="@+id/rvActionExpired"
                 android:layout_width="match_parent"
 
                 android:layout_height="143dp"
@@ -66,14 +64,14 @@
                 app:layout_constraintTop_toBottomOf="@+id/vMinTitle" />
 
             <ImageView
-                android:id="@+id/imgMinStatus"
+                android:id="@+id/imgActionExpired"
                 android:layout_width="13dp"
                 android:layout_height="16dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="11dp"
                 android:layout_marginTop="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/rvInProgress"
-                app:layout_constraintEnd_toStartOf="@+id/tvMinStatus"
+                app:layout_constraintBottom_toTopOf="@+id/rvActionExpired"
+                app:layout_constraintEnd_toStartOf="@+id/tvActionExpired"
                 app:layout_constraintTop_toTopOf="@+id/vMinTitle"
                 app:srcCompat="@drawable/alert_green_icon"
                 android:layout_marginRight="11dp" />
@@ -81,4 +79,5 @@
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
+
 </android.support.constraint.ConstraintLayout>
