--- a/Alert/app/src/main/res/layout/fragment_action_archived.xml
+++ b/Alert/app/src/main/res/layout/fragment_action_archived.xml
@@ -46,7 +46,8 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="Completed"
+                android:text="Archived"
+                android:textColor="@color/alertGray"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/rvActionArchived"
                 app:layout_constraintEnd_toEndOf="@+id/vMinTitle"
@@ -73,8 +74,7 @@
                 app:layout_constraintBottom_toTopOf="@+id/rvActionArchived"
                 app:layout_constraintEnd_toStartOf="@+id/tvActionArchived"
                 app:layout_constraintTop_toTopOf="@+id/vMinTitle"
-                app:srcCompat="@drawable/alert_green_icon"
-                android:layout_marginRight="11dp" />
+                app:srcCompat="@drawable/gray_rounded" />
 
         </android.support.constraint.ConstraintLayout>
 
