--- a/Alert/app/src/main/res/layout/fragment_in_progress.xml
+++ b/Alert/app/src/main/res/layout/fragment_in_progress.xml
@@ -11,8 +11,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         app:cardCornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -49,7 +49,7 @@
                         android:layout_width="13dp"
                         android:layout_height="16dp"
                         android:paddingTop="4dp"
-                        app:srcCompat="@drawable/alert_green_icon" />
+                        app:srcCompat="@drawable/amber_dot" />
 
                     <TextView
                         android:id="@+id/tvInProgress"
@@ -57,8 +57,9 @@
                         android:layout_height="wrap_content"
                         android:gravity="right"
                         android:paddingLeft="9dp"
-                        android:text="Completed"
+                        android:text="In Progress"
                         android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:textColor="@color/alertAmber"
                         android:textStyle="bold" />
 
                 </LinearLayout>
