--- a/Alert/app/src/main/res/values/colors.xml
+++ b/Alert/app/src/main/res/values/colors.xml
@@ -5,10 +5,10 @@
     <color name="colorAccent">#131D50</color>
     <color name="btnColor">#006ea0</color>
     <color name="white">#ffffff</color>
-    <color name="alertGreen">#46AA31</color>
+    <color name="alertGreen">#46aa31</color>
     <color name="alertAmber">#f3a500</color>
     <color name="sBar_Amber">#e29a01</color>
-    <color name="alertGray">#9D9D9D</color>
+    <color name="alertGray">#9d9d9d</color>
     <color name="sBar_Gray">#898888</color>
     <color name="alertRed">#e10514</color>
     <color name="sBar_Red">#ce0512</color>
