--- a/Alert/app/src/main/res/layout/action_bar.xml
+++ b/Alert/app/src/main/res/layout/action_bar.xml
@@ -1,55 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/action_toolbar"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    app:contentInsetLeft="0dp"
-    app:contentInsetStart="0dp"
-    android:contentInsetLeft="0dp"
-    android:contentInsetStart="0dp"
-    android:layout_height="?android:attr/actionBarSize"
-    android:background="@color/colorPrimaryDark">
+    android:layout_height="wrap_content"
+    card_view:cardElevation="6dp"
+    card_view:cardCornerRadius="0dp">
 
-    <RelativeLayout
-        android:id="@+id/content_layout"
+    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/action_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        app:contentInsetLeft="0dp"
+        app:contentInsetStart="0dp"
+        android:contentInsetLeft="0dp"
+        android:contentInsetStart="0dp"
+        android:layout_height="?android:attr/actionBarSize"
+        android:background="@color/colorPrimaryDark">
 
-        <ImageView
-            android:id="@+id/leftImageView"
-            android:layout_width="14dp"
-            android:layout_height="14dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="21dp"
-            android:layout_marginStart="21dp"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+        <RelativeLayout
+            android:id="@+id/content_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/action_bar_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="21dp"
-            android:layout_marginStart="21dp"
-            android:gravity="center"
-            android:textColor="@android:color/white"
-            android:textSize="19sp"
-            android:textStyle="bold" />
+            <ImageView
+                android:id="@+id/leftImageView"
+                android:layout_width="14dp"
+                android:layout_height="14dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="21dp"
+                android:layout_marginStart="21dp"
+                app:srcCompat="@mipmap/ic_launcher_round" />
 
-        <ImageView
-            android:id="@+id/rightImageView"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="21dp"
-            android:layout_marginRight="21dp"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            <TextView
+                android:id="@+id/action_bar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="21dp"
+                android:layout_marginStart="21dp"
+                android:gravity="center"
+                android:textColor="@android:color/white"
+                android:textSize="19sp"
+                android:textStyle="bold" />
 
-    </RelativeLayout>
+            <ImageView
+                android:id="@+id/rightImageView"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="21dp"
+                android:layout_marginRight="21dp"
+                app:srcCompat="@mipmap/ic_launcher_round" />
 
-</android.support.v7.widget.Toolbar>
+        </RelativeLayout>
+
+    </android.support.v7.widget.Toolbar>
+</android.support.v7.widget.CardView>
