--- a/Alert/app/src/main/res/layout/content_alert_detail.xml
+++ b/Alert/app/src/main/res/layout/content_alert_detail.xml
@@ -22,7 +22,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="31dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/bg_circle" />
+            app:srcCompat="@drawable/bg_circle"
+            android:layout_marginLeft="16dp" />
 
         <TextView
             android:id="@+id/textViewRisk"
@@ -34,7 +35,8 @@
             android:textSize="13sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/imgHazardIcon" />
+            app:layout_constraintStart_toEndOf="@+id/imgHazardIcon"
+            android:layout_marginLeft="16dp" />
 
         <TextView
             android:id="@+id/txtHazardName"
@@ -46,7 +48,8 @@
             android:textColor="@android:color/black"
             android:textSize="15sp"
             app:layout_constraintStart_toEndOf="@+id/imgHazardIcon"
-            app:layout_constraintTop_toBottomOf="@+id/textViewRisk" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewRisk"
+            android:layout_marginLeft="16dp" />
 
         <ImageView
             android:id="@+id/imgPopulationIcon"
@@ -56,7 +59,8 @@
             android:layout_marginTop="40dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imgHazardIcon"
-            app:srcCompat="@drawable/bg_circle" />
+            app:srcCompat="@drawable/bg_circle"
+            android:layout_marginLeft="16dp" />
 
         <TextView
             android:id="@+id/textViewPopulation"
@@ -70,7 +74,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/imgPopulationIcon"
-            app:layout_constraintTop_toBottomOf="@+id/txtHazardName" />
+            app:layout_constraintTop_toBottomOf="@+id/txtHazardName"
+            android:layout_marginLeft="16dp" />
 
         <TextView
             android:id="@+id/txtPopulationAffected"
@@ -82,7 +87,8 @@
             android:textColor="@android:color/black"
             android:textSize="15sp"
             app:layout_constraintStart_toEndOf="@+id/imgPopulationIcon"
-            app:layout_constraintTop_toBottomOf="@+id/textViewPopulation" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewPopulation"
+            android:layout_marginLeft="16dp" />
 
         <ImageView
             android:id="@+id/imgAreaIcon"
@@ -92,7 +98,8 @@
             android:layout_marginTop="40dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imgPopulationIcon"
-            app:srcCompat="@drawable/bg_circle" />
+            app:srcCompat="@drawable/bg_circle"
+            android:layout_marginLeft="16dp" />
 
         <TextView
             android:id="@+id/textViewAreas"
@@ -104,41 +111,44 @@
             android:textColor="@color/gray_title"
             android:textSize="13sp"
             app:layout_constraintStart_toEndOf="@+id/imgAreaIcon"
-            app:layout_constraintTop_toBottomOf="@+id/txtPopulationAffected" />
+            app:layout_constraintTop_toBottomOf="@+id/txtPopulationAffected"
+            android:layout_marginLeft="16dp" />
 
         <TextView
             android:id="@+id/txtArea"
+            android:lineSpacingMultiplier="1.2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="1dp"
-            android:text="Philippines, Leyte"
             android:textColor="@android:color/black"
             android:textSize="15sp"
             app:layout_constraintStart_toEndOf="@+id/imgAreaIcon"
-            app:layout_constraintTop_toBottomOf="@+id/textViewAreas" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewAreas"
+            android:layout_marginLeft="16dp" />
 
         <ImageView
             android:id="@+id/imgInfo"
             android:layout_width="26dp"
             android:layout_height="26dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="40dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imgAreaIcon"
-            app:srcCompat="@drawable/bg_circle" />
+            app:layout_constraintTop_toTopOf="@+id/textViewInfo"
+            app:srcCompat="@drawable/bg_circle"
+            android:layout_marginLeft="16dp" />
 
         <TextView
             android:id="@+id/textViewInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:text="@string/info_and_notes"
             android:textColor="@color/gray_title"
             android:textSize="13sp"
             app:layout_constraintStart_toEndOf="@+id/imgInfo"
-            app:layout_constraintTop_toBottomOf="@+id/txtArea" />
+            app:layout_constraintTop_toBottomOf="@+id/txtArea"
+            android:layout_marginLeft="16dp" />
 
         <TextView
             android:id="@+id/txtInfo"
@@ -150,7 +160,8 @@
             android:textColor="@android:color/black"
             android:textSize="15sp"
             app:layout_constraintStart_toEndOf="@+id/imgInfo"
-            app:layout_constraintTop_toBottomOf="@+id/textViewInfo" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewInfo"
+            android:layout_marginLeft="16dp" />
 
     </android.support.constraint.ConstraintLayout>
 
