--- a/Alert/app/src/main/res/layout/item_create_alert_field.xml
+++ b/Alert/app/src/main/res/layout/item_create_alert_field.xml
@@ -1,75 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:background="?selectableItemBackground"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="?selectableItemBackground"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:orientation="horizontal">
 
         <ImageView
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:id="@+id/ivIcon"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin" />
 
         <TextView
-            android:layout_marginTop="2dp"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:paddingBottom="@dimen/activity_vertical_margin"
             android:id="@+id/tvField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:drawablePadding="15dip"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
             android:text="@string/select_hazard"
             android:textColor="@color/hintGray"
-            android:textSize="15sp"
-            android:drawablePadding="15dip"/>
+            android:textSize="15sp" />
 
         <LinearLayout
-            android:visibility="gone"
             android:id="@+id/recyclerCon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:visibility="gone">
 
             <android.support.v7.widget.RecyclerView
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:layout_marginBottom="2dp"
                 android:id="@+id/recycler"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin" />
 
             <TextView
-                android:layout_marginBottom="@dimen/activity_vertical_margin_half"
-                android:layout_marginTop="2dp"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
                 android:id="@+id/text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/activity_vertical_margin_half"
+                android:layout_marginTop="2dp"
+                android:drawablePadding="15dip"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
                 android:text="@string/effected_area"
                 android:textColor="@color/hintGray"
-                android:textSize="15sp"
-                android:drawablePadding="15dip"/>
+                android:textSize="15sp" />
 
         </LinearLayout>
 
     </LinearLayout>
 
     <View
-        android:background="@color/divider_color"
         android:layout_width="match_parent"
-        android:layout_height="1dp"/>
+        android:layout_height="1dp"
+        android:background="@color/divider_color" />
 
 </LinearLayout>
