--- a/Alert/app/src/main/res/values/dimens.xml
+++ b/Alert/app/src/main/res/values/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="text_margin">16dp</dimen>
     <dimen name="activity_horizontal_margin_half">8dp</dimen>
     <dimen name="double_margin">32dp</dimen>
+    <dimen name="space_16">16dp</dimen>
+    <dimen name="space_275">275dp</dimen>
 </resources>
